# ChangeLog for sys-libs/pam
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/pam/ChangeLog,v 1.263 2010/07/31 21:56:09 hwoarang Exp $

  31 Jul 2010; Markos Chandras <hwoarang@gentoo.org> pam-1.1.1-r2.ebuild:
  Stable on amd64 wrt bug #329931

  27 Jul 2010; Christian Faulhammer <fauli@gentoo.org> pam-1.1.1-r2.ebuild:
  stable x86, bug 329931

  26 Jul 2010; Diego E. Pettenò <flameeyes@gentoo.org> pam-1.1.1-r2.ebuild,
  +files/Linux-PAM-1.1.1-pam_tally2-mode.patch:
  Add patch per bug #329885 Thanks to Hugo Mildenberger.

  22 May 2010; Justin Lecher <jlec@gentoo.org> pam-1.1.1-r2.ebuild:
  Removed ebeep in EAPI=3 ebuilds

  18 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> pam-1.1.1-r2.ebuild,
  +files/Linux-PAM-1.1.1+berkdb-5.patch:
  Add patch to fix building with Berkeley DB 5.0, closes bug #319831. Thanks
  to Lars Wendler for reporting.

  26 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/Linux-PAM-0.99.7.0-disable-regenerate-man.patch, -pam-1.0.4.ebuild,
  -files/Linux-PAM-1.0.4-fix-tests.patch, pam-1.1.0.ebuild,
  +files/Linux-PAM-1.1.0-xcrypt.patch, -pam-1.1.1.ebuild,
  -pam-1.1.1-r1.ebuild, pam-1.1.1-r2.ebuild,
  +files/Linux-PAM-1.1.1-xcrypt.patch:
  Cleanup old ebuilds and files; add patches to disable libxcrypt automagic
  dependency (bug #317195).

*pam-1.1.1-r2 (06 Apr 2010)

  06 Apr 2010; Jonathan Callen <abcd@gentoo.org> +pam-1.1.1-r2.ebuild:
  Bump to EAPI=3, add prefix keywords in revbump

*pam-1.1.1-r1 (10 Mar 2010)

  10 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +pam-1.1.1-r1.ebuild, +files/Linux-PAM-1.1.1-gentoodb.patch, metadata.xml:
  Merge back pam_userdb support into the main PAM ebuild. This time link
  against the shared, installed libraries of Berkeley DB, even though they
  might not be available at boot. Describe berkdb and cracklib USE flags in
  the metadata file.
