@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX Linux-PAM-0.99.8.1-xtests.patch 726 RMD160 4740f7039305c2520add212a576c9f16eb6c0db9 SHA1 716cd42c4c785db666b6c9911222760285a79e8f SHA256 6dbbadc4d9a5d08e55b381746dffd501bdd7dc07fdcb741b8ac95df07d5e1223
 AUX Linux-PAM-1.0.2-noyp.patch 7368 RMD160 6b5b2096670775cb0425ecbc46c33370fbe5bb55 SHA1 1225c8db75a4830767fbb0cbf8d89e4209651810 SHA256 a4c848f42bc8318344514de319473d2fce5d7e7c7ba5d4a03d60545c643b6425
 AUX Linux-PAM-1.1.0-debug.patch 565 RMD160 545e499fa45d7ec568387f4ee4fd8474cbfb3210 SHA1 31ee0fab111e55e6df270bb0483ef586d3177472 SHA256 8452c6397bb7dcbd1b7f9dd87c4021014d70adf0ceba6326c7428937503db3e9
@@ -13,6 +16,13 @@ DIST Linux-PAM-1.1.0.tar.bz2 1106379 RMD160 b57473ac39ef5c5ec22459e78e00abdbead3
 DIST Linux-PAM-1.1.1-docs.tar.bz2 495534 RMD160 182639c3fa79c96dbc263f2d16346345949bb0c8 SHA1 9e25f276546844bb5a58f30b5e5d5a97d25c5af5 SHA256 89950180aba6e5e05671c43d970d9738fd2b71b1421a2cf4d504f5c529586ac6
 DIST Linux-PAM-1.1.1.tar.bz2 1120055 RMD160 2d3c39cb2c3542d380e1331fef08c7086cc829d9 SHA1 8baf11b04396230ba7cf8b2bfb2d2bd75aab8fa6 SHA256 608d3eb9d7a5e1a7505fff62e6a583fdb6e52dc05bf54dc9661c5f395b1fb904
 EBUILD pam-1.1.0.ebuild 5250 RMD160 72b539e4564fc086b55202216c4b42ca20b7790c SHA1 a5ea008a77a8538e299331f4979097047c66cbcb SHA256 d119aedf71062fbb30a5d818df9bccdaa7ef170c3af479858793964a18c96fbd
-EBUILD pam-1.1.1-r2.ebuild 5814 RMD160 541677964c27df33ea4b5498af542bd2641d032f SHA1 4aff3c0a3bd299fc516d648f50745b7b7f7280dc SHA256 734e6f4efe2ccad6f9087f84f8db2c64013ef53c64a3e1368a04e2afc390ab18
-MISC ChangeLog 42434 RMD160 50fc75d3b072c0ea4a1038aab361df4542c908b7 SHA1 f4bf18f96e951993199753e4876140ec0055022b SHA256 1831d1ff28de0539824beb00da60a42f31f3e0869da8a06ea9ebb437e936b938
+EBUILD pam-1.1.1-r2.ebuild 6541 RMD160 ee6c9c16143c3e7d7ec84e088acc17b921560607 SHA1 4df34631646257aad7ecf9dfc44f95595216495e SHA256 4889a434aca44f47d6af0199175ad85a83e538c2443a2edcd5f2041811f7e3df
+MISC ChangeLog 42667 RMD160 d719980f1ba228900b5d7c1d0fff4d0adb5966da SHA1 725b9ff2050025e4da802df3744daf0b6d2bfe6b SHA256 d3edfa5941695bb2a3c7156023add3cee19b9410de30da781dd85b5d88d8c246
 MISC metadata.xml 1129 RMD160 a800f5ac4255ca20c26791ff0b57c3c923666623 SHA1 99e58550271cf1c3e23c4547387469a0d211ae55 SHA256 e160643aca26e0418b31429836ae1b4c673474cd6130b7e2ac0d0bf41380df0b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAkxU7lEACgkQAiZjviIA2XiPKQCg8BYLS6Bl6vT6RKctmaqN1eQR
+5QsAoJ8HVQ2Umk3vydOlLMEWtvMEUiSL
+=wtlM
+-----END PGP SIGNATURE-----
